examples/test/testpolicy7320.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7320
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key15: value34
      key18: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value25
          key49: value13
          key12: value42
      podSelector:
        matchLabels:
          key16: value49
          key6: value1
          key45: value35
